# On-Board-Pose-Estimation

./: .gitignore  CMakeLists.txt  EPnP.cc  README.MD  README.md  hardware_monitor.sh  img000001.txt  img000002.txt  main.cc  monitor.sh  obj_det.cc  results.py  run_all.sh  utils_various.py
model/: yolov8n.xml  yolov8n_352.xml  yolov8n_pose_320.xml  yolov8n_pose_320_int8.xml  yolov8n_pose_352.xml
src/: inference.cpp  slab_score.cpp
src/EPnP/: EPnP.cpp  EPnP.h  epnp.cpp  epnp.h
src/YOLOv8/: yolov8.cpp  yolov8.h
